2020-06-19  Tom Tromey  <tromey@adacore.com>

	* lib/target.exp (default_target_compile): Add early_flags.
	* doc/dejagnu.texi (target_compile procedure): Document
	early_flags.

2020-06-02  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41647
	* NEWS: Fix typo.  Fix Emacs mode tag.
	Document use of Tcl namespace ::dejagnu for internals.
	* runtest.exp (dejagnu::command_line): New namespace.
	(dejagnu::command_line::save_cmd_var): New procedure.
	(dejagnu::command_line::restore_cmd_vars): New procedure.
	(dejagnu::command_line::dump_cmd_vars): New procedure.
	* runtest.exp: Save internal variables set by command line
	arguments during the first pass and restore their values after
	loading testsuite init files.

2020-06-01  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41647
	* runtest.exp: Describe search for testsuite at verbose level 3.
	Print initial working directory at verbose level 1.

2020-05-28  Jacob Bachmeyer  <jcb62281+dev@gmail.com>

	PR 41587
	* testsuite/lib/launcher.exp: Adjust LAUNCHER variable default
	value to use an absolute file name.
	* testsuite/lib/report-card.exp: Likewise.
	* testsuite/runtest.main/options.exp: Set outdir in options-init
	instead of changing working directory in child runtest.

	* runtest.exp (logname): Move verbose display of logname to
	immediately after finding the user's login name.

	PR 41585
	* runtest.exp (libdir): Fix default value of global variable.

	* ChangeLog: Tidy irregular indentation.

2020-05-26 Jacob Bachmeyer <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (target_compile procedure): Add documentation.

2020-05-26 Jacob Bachmeyer <jcb62281+dev@gmail.com>

	* doc/dejagnu.texi (target_link procedure): New stub node.
	(default_link procedure): Document internal procedure.
	(default_target_assemble procedure): Likewise.
	(default_target_compile procedure): Likewise.

2020-05-20 Jacob Bachmeyer <jcb62281+dev@gmail.com>

	* baseboards/{aarch64-sim, arm-ice, arm-sim, basic-sid, iq2000-sim,